# bob

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/basic/: Bobfile  targets.json
examples/basic/src/: my_main.c  my_other_asm.S  my_other_main.c
examples/c-add-include-path/: Bobfile  fun.c
examples/c-add-include-path/inc/: Bobfile
examples/c-add-include-path/inner/: fun.h
examples/custom-name/: Tomatofile.py
examples/custom-name/another/: Tomatofile.py
examples/generated-c/: Bobfile  wow.c
examples/include/: Bobfile
examples/include/flat/: Bobfile
examples/include/flat-subbob/: Bobfile
examples/include/targets/: Bobfile
examples/jobserver/: Bobfile  Makefile
examples/name-from-future/: Bobfile
examples/override-cc/: Bobfile
examples/scoping/: Bobfile
examples/scoping/evil/: Bobfile
examples/shell/: Bobfile  bad  fun  ninja_magic
examples/type-safety/: Bobfile
src/bob/: __init__.py  cli.py  constants.py  jobserver.py  log.py  prelude.py  utilities.py
src/bob/api/: cli.py  path.py  paths.py  providers.py  rule.py  rules.py  scope.py  scoped_value.py  subprojects.py  variable.py
src/bob/commands/: build.py  clean.py  compdb.py  (+2 more)
tests/: conftest.py  test_api.py  test_build.py  test_cli.py  test_configure.py  test_expression.py  test_prelude.py  test_provider.py  test_rule.py  test_rule_input.py  test_scope.py  test_targets.py  utilities.py
tests/cases/: basic.ninja  description.ninja  subprojects.bob  subprojects.ninja  variables.bob  variables.ninja
tests/examples/: test_examples.py
tests/plugins/: test_c.py  test_make.py
(+20 files in other folders)
