[project]
name = "bob-build"
version = "0.1.0"
description = "The ergonomic Ninja-based build system."
readme = "README.md"
authors = [{ name = "Noam Zaks", email = "noam@noamzaks.com" }]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = ["ninja>=1.13.0", "rich-click>=1.9.8"]

[project.urls]
Repository = "https://github.com/bob-hq/bob"

[project.scripts]
bob = "bob:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.ruff.lint]
ignore = ["F403", "F405"]

[tool.mypy]
strict = true

# TODO: https://github.com/pallets/click/issues/3502
[tool.uv]
override-dependencies = ["click==8.3.0"]

[tool.uv.build-backend]
module-name = "bob"
